--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/paper"]
 	path = themes/paper
-	url = git@github.com:XYlearn/hugo-paper.git
+	url = https://github.com/XYlearn/hugo-paper.git
